--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simple react app",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js",
+    "start": "node server.js"
   },
   "author": "Mayke Herbst",
   "license": "MIT",
